apps/synology/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: synology
  labels:
    app: synology
